2003-05-29  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/Variable.pm (output): Declare as a method, since it
	is only used this way.
	(define): Fix documentation of $cond.
	Suggested by Raja R. Harinath.

2003-05-25  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/Variable.pm, lib/Automake/VarDef.pm: New files.
	* lib/Automake/Makefile.am (dist_perllib_DATA): Add Variable.pm
	and VarDef.pm.
	* automake.in: Use Automake::Variable and Automake::VarDef.
	(MACRO_PATTERN): Delete. Now Automake::Variable::_MACRO_PATTERN.
	(am_macro_for_var): Delete. Now Automake::Variable::_am_macro_for_var.
	(ac_macro_for_var): Delete. Now Automake::Variable::_ac_macro_for_var.
	(silent_variable_override): Delete.  Now
	Automake::Variable::_silent_variable_override.
	(var_value, var_location, var_comment, var_type, var_owner,
	var_pretty, content_seen): Delete.  This functionality is now
	offered by Automake::Variable and Automake::VarDef.
	(VAR_AUTOMAKE, VAR_CONFIGURE, VAR_MAKEFILE, VAR_ASIS, VAR_PRETTY):
	Delete.  Now defined in Automake::VarDef.
	(var_order): Delete.  Now Automake::Variable::_var_order.
	(appendvar): Delete.  Now Automake::Variable::_appendvar.
	(var_SUFFIX_trigger): Register using Automake::Variable::hook.
	(initialize_per_input): Call Automake::Variable::reset.
	(err_var, msg_cond_var, msg_var, reject_var): Delete.  Now
	defined in Automake::Variable.
	(generate_makefile, process_option_list, handle_languages)
	(traverse_variable_recursively_worker)
	(transform_variable_recursively, handle_compile)
	(handle_libraries, handle_ltlibraries)
	(check_typos, handle_dist, handle_subdirs, scan_autoconf_files):
	Adjust to use Automake::Variable functions.
	(check_ambiguous_condition): Delete.  Now
	Automake::Variable::_check_ambiguous_condition.
	(condition_ambiguous_p): Delete.  Now
	Automake::Variable::condition_ambiguous_p.
	(variable_not_always_defined_in_cond): Delete.  Now
	Automake::Variable::not_always_defined_in_cond.