@@ -2280,7 +2280,7 @@ sub traverse_variable_recursively_worker ($$&&$$)
 
   my @allresults = ();
   my $cond_once = 0;
-  my $v = var $var;
+  my $v = rvar $var;
   foreach my $cond ($v->conditions->conds)
     {
       if (ref $cond_filter)
@@ -2290,13 +2290,13 @@ sub traverse_variable_recursively_worker ($$&&$$)
 	  # If we found out several definitions of $var
 	  # match $cond_filter then we are in trouble.
 	  # Tell the user we don't support this.
-	  &check_variable_defined_unconditionally ($var, $parent)
+	  $v->check_defined_unconditionally ($parent, $parent_cond)
 	    if $cond_once;
 	  $cond_once = 1;
 	}
       my @result = ();
       my $full_cond = $cond->merge ($parent_cond);
-      foreach my $val (&variable_value_as_list ($var, $cond, $parent))
+      foreach my $val ($v->value_as_list ($cond, $parent, $parent_cond))
 	{
 	  # If $val is a variable (i.e. ${foo} or $(bar), not a filename),
 	  # handle the sub variable recursively.
