@@ -1,5 +1,16 @@
 2003-05-29  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* lib/Automake/Variable.pm (check_defined_unconditionally): Add
+	the $parent_cond argument.
+	(output): Use $self->name in diagnostic not $self.
+	(variable_value_as_list): Rename as ...
+	(value_as_list): ... this.  Declare as a method.  Take a $parent_cond
+	argument and pass it to check_defined_unconditionally.  Do not call
+	variable_assert, now that this is a method.
+	(variable_assert): Delete (unused).
+	* automake.in (traverse_variable_recursively_worker): Adjust to
+	use check_defined_unconditionally and value_as_list as a methods.
+
 	* lib/Automake/Variable.pm (output): Declare as a method, since it
 	is only used this way.
 	(define): Fix documentation of $cond.
